# KIV-VSS-Benchmark

./: CMakeLists.txt  README.md
misc/measured_data/: begin.json  end.json  middle.json
misc/scripts/: bar_chart_begin.py  bar_chart_end.py  bar_chart_middle.py  box_plot.py  test.py  test2.py
src/: CMakeLists.txt  benchmark.h  config.h  main.cpp  utils.h
